# markmark-windows

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  fs.rs
src/assets/css/: markdown.css  scroll.css
src/assets/js/: markdown-reader.js
src/components/: ResizeHandle.tsx  WelcomeView.tsx
src/components/Outline/: OutlinePanel.tsx
src/components/Settings/: SettingsView.tsx
src/components/Sidebar/: FileRow.tsx  FileTree.tsx
src/components/Viewer/: CriticToolbar.tsx  MarkdownViewer.tsx
src/services/: criticMarkup.ts  localization.ts  markdownRenderer.ts  outlineService.ts  themeManager.ts
src/stores/: appStore.ts  documentStore.ts  fileTreeStore.ts
src/types/: index.ts
