[package]
name = "markmark"
version = "2.0.15"
edition = "2021"

[lib]
name = "markmark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
walkdir = "2"
trash = "5"
tokio = { version = "1", features = ["process", "io-util"] }
